# adler32_checksum_rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: adler32_checksum_benchmark.rs
docs/: SHIELDS.md
src/: adler32.rs  errors.rs  lib.rs  primitives.rs
